--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 yew = { version = "0.20.0", features=["csr"] }
 yew-router = "0.17.0"
 gloo = "0.8.0"
+wasm-bindgen = "0.2.86"
+web-sys = { verison = "0.3.56", features = ["HtmlInputElement"] }
